--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "homepage": "http://carlonicora.com",
     "time": "2015-03-16",
     "license": "Apache-2.0",
+    "version": "2.1.0",
     "authors": [
         {
             "name": "Carlo Nicora",
