--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,24 @@
 {
     "name": "carlonicora/cryogen",
+    "description": "Basic library for cryogen PHP ORMs",
+    "version": "4.0.1",
+    "type": "library",
+    "homepage": "https://carlonicora.com",
+    "time": "2019-05-14",
+    "authors": [
+        {
+            "name": "Carlo Nicora",
+            "email": "carlo@carlonicora.com",
+            "homepage": "http://carlonicora.com",
+            "role": "Developer"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "carlonicora\\cryogen\\": "src/"
         }
+    },
+    "require": {
+        "php": "^7.0"
     }
 }
