--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "carlonicora/cryogen",
     "description": "Basic library for cryogen PHP ORMs",
-    "version": "4.0.2",
+    "version": "4.0.3",
     "type": "library",
     "homepage": "https://carlonicora.com",
     "time": "2019-05-14",
@@ -19,6 +19,7 @@
         }
     },
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "ext-json": "*"
     }
 }
